<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_pic" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/etEnroll"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:gravity="center_horizontal"
                android:text="@string/etEnroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/etFirstName"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEnroll" />

            <TextView
                android:id="@+id/etMiddleName"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etMiddleName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

            <TextView
                android:id="@+id/etLastName"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/etLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMiddleName" />

            <TextView
                android:id="@+id/etEmailid"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLastName" />

            <TextView
                android:id="@+id/etPassword"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailid" />

            <TextView
                android:id="@+id/etGender"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etGender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/etCity"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="@string/etCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etGender" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>